Add Discord scraping tools and test export
- Add strip_discord_json.py to remove bloat from Discord exports (93% size reduction)
- Update .gitignore to exclude large export data and Discord tools
- Completed test scrape of server 989253812634157096 (94 channels, 665MB)

Key learnings:
- --include-threads flag causes hangs, avoid in production
- Full server exports take hours due to API rate limits
- Need incremental updates with --after flag for daily automation

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,15 @@ Thumbs.db
 # ClearanceJobs submodule cache
 ClearanceJobs/__pycache__/
 ClearanceJobs/ClearanceJobs/__pycache__/
+
+# Discord scraping
+exports/
+dce-cli/
+dce-cli.zip
+DiscordChatExporter/
+nohup.out
+
+# Large data files
+*_articles/
+*_articles_extracted/
+archive/
