Add Deep Research Engine with Streamlit UI integration
- Built SimpleDeepResearch engine (590 lines) with task decomposition, retry logic, entity tracking
- Integrated into Streamlit UI with live progress display and entity visualization
- Moved API keys to .streamlit/secrets.toml (gitignored)
- Created deployment guide for Streamlit Cloud
- Added KlipNews automation roadmap for investigative journalism team

Features:
- Task decomposition for complex questions
- Retry logic with query reformulation
- Entity relationship tracking
- Live progress streaming
- Follow-up task generation
- Multi-hour investigation capability
- Configurable limits (tasks, time, retries)

Ready for GitHub and Streamlit Cloud deployment.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # Environment variables and secrets
 .env
+.env.local
+.env.*.local
 .streamlit/secrets.toml
+secrets.toml
+
+# Virtual environment
+.venv/
 
 # Python
 __pycache__/
