--- a/.streamlit/secrets.toml.example
+++ b/.streamlit/secrets.toml.example
@@ -1,42 +1,47 @@
-# =============================================================================
-# Streamlit Secrets Configuration
-# =============================================================================
+# Streamlit Secrets Configuration Template
+# Copy this file to secrets.toml and fill in your actual API keys
 #
-# For Local Development:
-#   1. Copy: cp .streamlit/secrets.toml.example .streamlit/secrets.toml
-#   2. Add your API keys below (uncomment lines and add real keys)
-#   3. Restart the Streamlit app
+# For local development:
+# 1. Copy this file: cp secrets.toml.example secrets.toml
+# 2. Fill in your API keys below
+# 3. secrets.toml is gitignored and won't be committed
 #
-# For Streamlit Cloud Deployment:
-#   1. Go to your app's dashboard at https://share.streamlit.io
-#   2. Click "Settings" → "Secrets"
-#   3. Copy the contents below and paste them
-#   4. Uncomment the keys you want to use
-#   5. Replace placeholder values with your actual API keys
-#   6. Click "Save" (app will restart automatically)
-#
-# =============================================================================
+# For Streamlit Cloud deployment:
+# 1. Go to your app settings on Streamlit Cloud
+# 2. Navigate to "Secrets" section
+# 3. Copy-paste the contents of your secrets.toml file there
 
-# OpenAI API Key (REQUIRED for AI Research tab)
+# OpenAI API Key (REQUIRED for AI Research and Deep Research tabs)
 # Get your key at: https://platform.openai.com/api-keys
-# Cost: ~$0.01-0.05 per AI research query
-OPENAI_API_KEY = "sk-proj-your-openai-key-here"
+OPENAI_API_KEY = "sk-your-key-here"
 
-# DVIDS API Key (RECOMMENDED - for military media search)
+# DVIDS API Key (for military media search)
 # Get your key at: https://www.dvidshub.net/
-# Cost: FREE
-# Note: A demo key is provided by default, but get your own for production
-DVIDS_API_KEY = "your-dvids-key-here"
+DVIDS_API_KEY = "key-your-key-here"
 
-# SAM.gov API Key (RECOMMENDED - for government contract search)
+# SAM.gov API Key (for government contract search)
 # Get your key at: https://sam.gov → Account Details
-# Cost: FREE
-SAM_GOV_API_KEY = "your-sam-gov-key-here"
+SAM_GOV_API_KEY = "SAM-your-key-here"
 
-# =============================================================================
-# Notes:
-# - Only OPENAI_API_KEY is required (for AI Research tab)
-# - DVIDS and SAM.gov are free but require registration
-# - Your teammates won't see these keys - they're loaded automatically
-# - Never commit secrets.toml to Git (it's in .gitignore)
-# =============================================================================
+# USAJobs API Key (for federal job search)
+# Get your key at: https://developer.usajobs.gov/APIRequest/Index
+USAJOBS_API_KEY = "your-key-here"
+
+# Brave Search API Key (for web search)
+# Get your key at: https://brave.com/search/api/
+BRAVE_SEARCH_API_KEY = "your-key-here"
+
+# RapidAPI Key (for Twitter search)
+# Get your key at: https://rapidapi.com/
+RAPIDAPI_KEY = "your-key-here"
+
+# Email Alert Configuration (for Boolean Monitoring alerts)
+# Note: Gmail requires "App Password" not your regular password
+# Generate at: https://myaccount.google.com/apppasswords
+SMTP_HOST = "smtp.gmail.com"
+SMTP_PORT = 587
+SMTP_USERNAME = "your-email@gmail.com"
+SMTP_PASSWORD = "your-app-password-here"
+SMTP_FROM_EMAIL = "your-email@gmail.com"
+SMTP_FROM_NAME = "OSINT Monitor"
+ALERT_TO_EMAIL = "your-email@gmail.com"
