--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ Pillow>=10.0.0
 litellm>=1.0.0
 python-dotenv>=1.0.0
 APScheduler==3.11.0
+playwright>=1.40.0
+beautifulsoup4>=4.12.0
+aiohttp>=3.9.0
+PyYAML>=6.0.0
+lxml>=5.0.0
