Add feature flags + lazy instantiation + import isolation - Tasks 2 & 3 complete
Task 2: Feature Flags + Lazy Instantiation
- Updated config_default.yaml with all 8 integrations and enabled flags
- Refactored registry.py for lazy instantiation (classes stored, instances created on demand)
- Added instance caching to avoid redundant instantiation
- Added is_enabled() method to check feature flags
- Added get_instance() for lazy instantiation
- Added get_all_enabled() to get only enabled integrations
- Added list_enabled_ids() to list enabled integration IDs

Task 3: Import Isolation + Status Tracking
- Added _try_register() method with per-integration error handling
- Registry survives individual integration registration failures
- Added get_status() API for debugging/UI showing:
  - registered: bool
  - enabled: bool (from config)
  - available: bool (can instantiate)
  - reason: str (error message if unavailable)

Evidence:
- tests/test_feature_flags.py: All tests pass ✅
- Feature flags control availability (tested with SAM disabled)
- Lazy instantiation works with caching
- Status API provides debugging info

Benefits:
- Instant rollback: Set enabled: false in config.yaml
- Survive failures: One broken integration doesn't crash registry
- Debug visibility: get_status() shows why integrations unavailable
- Performance: Lazy instantiation reduces startup time

Week 1 Tasks 2 & 3: COMPLETE
REFACTOR_AGENT

--- a/config_default.yaml
+++ b/config_default.yaml
@@ -72,7 +72,10 @@ timeouts:
 # ============================================================================
 # Database-Specific Settings
 # ============================================================================
+# Feature Flags: Set enabled: false to disable specific integrations
+# This allows instant rollback if an integration breaks or causes issues
 databases:
+  # Government Data Sources
   sam:
     enabled: true
     timeout: 30                   # SAM.gov can be slow
@@ -92,6 +95,24 @@ databases:
     enabled: true
     requires_puppeteer: true      # Needs browser automation
     timeout: 45                   # Longer for Puppeteer operations
+
+  fbi_vault:
+    enabled: true
+    timeout: 30                   # FBI Vault scraping can be slow
+
+  # Social Media & Community Sources
+  discord:
+    enabled: true
+    timeout: 5                    # Local file search, fast
+
+  twitter:
+    enabled: true                 # Requires twitterexplorer_sigint
+    timeout: 20
+
+  # Web Search
+  brave_search:
+    enabled: true
+    timeout: 10
 
 # ============================================================================
 # Provider Fallback (LiteLLM Feature)
