--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,167 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.1
+aiosignal==1.4.0
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.11.0
+APScheduler==3.11.0
+attrs==25.4.0
+Authlib==1.6.5
+beautifulsoup4==4.14.2
+behave==1.2.6
+blinker==1.9.0
+cachetools==6.2.1
+certifi==2025.10.5
+cffi==2.0.0
+chardet==5.2.0
+charset-normalizer==3.4.4
+click==8.3.0
+colorama==0.4.6
+cryptography==46.0.3
+cssselect==1.3.0
+cyclopts==4.0.0
+Deprecated==1.2.18
+distro==1.9.0
+dnspython==2.8.0
+docstring_parser==0.17.0
+docutils==0.22.2
+email-validator==2.3.0
+exceptiongroup==1.3.0
+execnet==2.1.1
+fasteners==0.20
+fastmcp==2.12.5
+fastuuid==0.13.5
+filelock==3.20.0
+frozenlist==1.8.0
+fsspec==2025.9.0
+gitdb==4.0.12
+GitPython==3.1.45
+greenlet==3.2.4
+h11==0.16.0
+hf-xet==1.1.10
+httpcore==1.0.9
+httpx==0.28.1
+httpx-sse==0.4.3
+huggingface-hub==0.35.3
+idna==3.11
+importlib_metadata==8.7.0
+iniconfig==2.1.0
+isodate==0.7.2
+Jinja2==3.1.6
+jiter==0.11.1
+jsonschema==4.25.1
+jsonschema-path==0.3.4
+jsonschema-specifications==2025.9.1
+lazy-object-proxy==1.12.0
+litellm==1.78.3
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+mcp==1.16.0
+mdurl==0.1.2
+more-itertools==10.8.0
+MouseInfo==0.1.3
+mss==10.1.0
+multidict==6.7.0
+mycdp==1.2.1
+narwhals==2.8.0
+nodriver==0.47.0
+numpy==2.3.4
+openai==2.5.0
+openapi-core==0.19.5
+openapi-pydantic==0.5.1
+openapi-schema-validator==0.6.3
+openapi-spec-validator==0.7.2
+outcome==1.3.0.post0
+packaging==25.0
+pandas==2.3.3
+parameterized==0.9.0
+parse==1.20.2
+parse_type==0.6.6
+pathable==0.4.4
+pdbp==1.7.1
+pillow==11.3.0
+platformdirs==4.5.0
+playwright==1.55.0
+playwright-stealth==2.0.0
+pluggy==1.6.0
+praw==7.8.1
+prawcore==2.4.0
+propcache==0.4.1
+protobuf==6.33.0
+pyarrow==21.0.0
+PyAutoGUI==0.9.54
+pycparser==2.23
+pydantic==2.12.3
+pydantic-settings==2.11.0
+pydantic_core==2.41.4
+pydeck==0.9.1
+pyee==13.0.0
+PyGetWindow==0.0.9
+Pygments==2.19.2
+PyMsgBox==2.0.1
+pynose==1.5.5
+pyotp==2.9.0
+pyperclip==1.11.0
+PyRect==0.2.0
+PyScreeze==1.0.1
+PySocks==1.7.1
+pytest==8.4.2
 pytest-asyncio==1.2.0
 pytest-html==4.0.2
 pytest-metadata==3.1.1
 pytest-ordering==0.6
 pytest-rerunfailures==16.1
 pytest-xdist==3.8.0
-pytest==8.4.2
-praw==7.8.1
-prawcore==2.4.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+python-multipart==0.0.20
+python-xlib==0.33
+python3-xlib==0.15
+pytweening==1.2.0
+pytz==2025.2
+PyYAML==6.0.3
+referencing==0.36.2
+regex==2025.9.18
+requests==2.32.5
+rfc3339-validator==0.1.4
+rich==14.2.0
+rich-rst==1.3.2
+rpds-py==0.27.1
+sbvirtualdisplay==1.4.0
+selenium==4.37.0
+seleniumbase==4.43.0
+setuptools==80.9.0
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.8
+sse-starlette==3.0.2
+starlette==0.48.0
+streamlit==1.50.0
+tabcompleter==1.4.0
+tenacity==9.1.2
+tiktoken==0.12.0
+tokenizers==0.22.1
+toml==0.10.2
+tornado==6.5.2
+tqdm==4.67.1
+trio==0.31.0
+trio-websocket==0.12.2
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+tzlocal==5.3.1
+undetected-chromedriver==3.5.5
+update-checker==0.18.0
+urllib3==2.5.0
+uvicorn==0.38.0
+watchdog==6.0.0
+websocket-client==1.9.0
+websockets==15.0.1
+Werkzeug==3.1.1
+wheel==0.45.1
+wrapt==1.17.3
+wsproto==1.2.0
+yarl==1.22.0
+zipp==3.23.0
