--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,32 @@
-# =============================================================================
-# Environment Variables for Unified Search Application
-# =============================================================================
-#
-# SETUP INSTRUCTIONS:
-#   1. Copy this file: cp .env.example .env
-#   2. Add your actual API keys below
-#   3. Restart the Streamlit app
-#
-# IMPORTANT: Never commit .env to Git! It's already in .gitignore.
-#
-# =============================================================================
+# API Keys Configuration
+# Copy this file to .env and fill in your actual API keys
 
-# OpenAI API Key (REQUIRED for AI Research tab)
-# Get your key at: https://platform.openai.com/api-keys
-# Cost: ~$0.01-0.05 per research query using gpt-5-mini
-OPENAI_API_KEY=your-openai-key-here
+# OpenAI (required for LLM-driven research)
+OPENAI_API_KEY=your-openai-api-key-here
 
-# DVIDS API Key (RECOMMENDED - for military media search)
-# Get your key at: https://www.dvidshub.net/
-# Cost: FREE (just need to register)
-DVIDS_API_KEY=your-dvids-key-here
+# Government Data Sources
+SAM_GOV_API_KEY=your-sam-gov-api-key-here
+DVIDS_API_KEY=your-dvids-api-key-here
+USAJOBS_API_KEY=your-usajobs-api-key-here
 
-# SAM.gov API Key (RECOMMENDED - for government contract search)
-# Get your key at: https://sam.gov → Account Details
-# Cost: FREE (just need to register)
-SAM_GOV_API_KEY=your-sam-gov-key-here
+# Search Providers
+BRAVE_SEARCH_API_KEY=your-brave-api-key-here
+RAPIDAPI_KEY=your-rapidapi-key-here
+
+# Social Media (optional)
+REDDIT_CLIENT_ID=your-reddit-client-id-here
+REDDIT_CLIENT_SECRET=your-reddit-client-secret-here
+REDDIT_USERNAME=your-reddit-username-here
+REDDIT_PASSWORD=your-reddit-password-here
+
+# Email Alerts (optional)
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_USERNAME=your-smtp-username-here
+SMTP_PASSWORD=your-smtp-password-here
+SMTP_FROM_EMAIL=alerts@example.com
+SMTP_FROM_NAME=SigInt Alerts
+ALERT_TO_EMAIL=your-email@example.com
+
+# Alternative LLM Providers (optional)
+GEMINI_API_KEY=your-gemini-api-key-here
