fix: Consolidate timeout configuration to single source of truth
- Increase task_timeout_seconds from 300s to 600s (conservative limit for complex tasks)
- Simplify timeout logic: Remove confusing hierarchy between max_time_per_task_seconds and task_timeout_seconds
- Overall task timeout now governed solely by deep_research.task_timeout_seconds (600s)
- Phase 3C time budget (max_time_per_task_seconds) now optional, defaults to None when not set
- Fixes NSA surveillance query timeouts (all 4 tasks timed out at 180s, Twitter multi-page fetches need 180-250s)

Changes:
1. config_default.yaml:
   - task_timeout_seconds: 300 → 600 (10 min allows Twitter/Brave multi-page fetches)
   - Removed max_time_per_task_seconds from hypothesis_branching (optional feature)
   - Added clarifying comments: task timeout vs Phase 3C time budget

2. research/deep_research.py:
   - Removed confusing timeout hierarchy logic (lines 410-417)
   - Single source of truth: deep_research.task_timeout_seconds (fallback: 600s)
   - Phase 3C time budget now optional (defaults to None, only used when coverage_mode: true)
   - Added documentation: Phase 3C time budget separate from overall task timeout

Benefits:
- Single source of truth for task timeouts (no silent overrides)
- Clear, predictable behavior
- Conservative 600s allows complex tasks to complete
- Can be raised/removed later with production evidence

Following Codex's conservative recommendation: Keep safeguard timeout, don't remove entirely yet.

--- a/config_default.yaml
+++ b/config_default.yaml
@@ -193,7 +193,7 @@ research:
     max_time_minutes: 120         # Maximum total investigation time (minutes)
     min_results_per_task: 3       # Minimum results to consider task successful
     max_concurrent_tasks: 4       # Max parallel tasks (1=sequential, 3-5=parallel)
-    task_timeout_seconds: 300     # Per-task timeout when not using hypotheses (5 min)
+    task_timeout_seconds: 600     # Per-task timeout (10 min) - Conservative limit allows complex tasks (Twitter multi-page fetches) to complete
 
   # Feature flags (start disabled, enable after validation)
   enable_scoping: false           # Enable ScopingAgent (query clarification + planning)
@@ -256,10 +256,7 @@ research:
     max_hypotheses_to_execute: 5     # HARD CEILING: Maximum hypotheses to execute (never exceed)
                                      # Same as max_hypotheses_per_task unless you want different limit for execution
                                      # LLM can stop early but will never exceed this limit
-
-    max_time_per_task_seconds: 180   # TIME BUDGET: Maximum time to spend on hypothesis execution per task
-                                     # Default: 180 seconds (3 minutes)
-                                     # LLM can stop early but execution will halt at this limit
+                                     # NOTE: Task timeout controlled by deep_research.task_timeout_seconds (600s)
 
     # Phase 3C (coverage_mode: true) behavior:
     # - Executes hypotheses sequentially (one-by-one, not parallel)
