fix: enable Phase 3C coverage assessment (coverage_mode: false → true)
Root cause analysis:
- Config had two separate settings for hypothesis behavior
- hypothesis_branching.mode: 'execution' enables Phase 3A+3B (working)
- hypothesis_branching.coverage_mode: false disabled Phase 3C (blocker)
- When coverage_mode=false, uses Phase 3B (parallel, no coverage metrics)
- When coverage_mode=true, uses Phase 3C (sequential with coverage assessment)

Fix:
- Changed config_default.yaml:251 from coverage_mode: false → true
- Enables sequential hypothesis execution with adaptive stopping
- Coverage decisions now logged in report metadata

Verified:
- Test run shows 'Sequential execution complete' messages
- Coverage Assessment sections visible in output
- Phase 3C mechanics working as designed

Resolves blocker identified in post-merge critique.

--- a/config_default.yaml
+++ b/config_default.yaml
@@ -248,10 +248,10 @@ research:
     # Adaptive stopping based on coverage analysis (Phase 3C)
     # Only applies when mode: "execution"
 
-    coverage_mode: false            # EXECUTION STRATEGY: false | true
+    coverage_mode: true             # EXECUTION STRATEGY: false | true
                                      # - false: Parallel execution, all hypotheses run (Phase 3B - faster)
                                      # - true: Sequential execution with adaptive stopping (Phase 3C - adaptive)
-                                     # Default: false (parallel, backward compatible)
+                                     # Changed to true 2025-11-19 to enable Phase 3C coverage assessment
 
     max_hypotheses_to_execute: 5     # HARD CEILING: Maximum hypotheses to execute (never exceed)
                                      # Same as max_hypotheses_per_task unless you want different limit for execution
