feat: LLM-powered coverage-based follow-up generation
Replace hardcoded entity concatenation with intelligent gap analysis.
Fix 3 critical bugs preventing follow-up creation.

VALIDATION RESULTS (2025-11-19):
✅ 8 follow-up tasks created (vs 0 in buggy versions)
✅ 0 entity permutations found (primary bug FIXED)
✅ All follow-ups address coverage gaps (process, documentation, sentiment)
✅ LLM judgment working (created 2-3 follow-ups per parent task)
✅ All follow-ups received hypotheses (3-4 each)

BUGS FIXED:
1. Bug 1 (Original): Removed hardcoded entity concatenation
   - Old: `contextualized_query = f"{entity} {parent_task.query}"`
   - Impact: Created "Donald Trump + parent query" permutations
   - Fix: Replaced with LLM call to analyze coverage gaps

2. Bug 2 (Testing): Removed hardcoded heuristics blocking follow-ups
   - Old: `entities_found >= 3 and total_results >= 5` thresholds
   - Impact: First 2 tests had 0 follow-ups despite coverage 25-55%
   - Fix: Let LLM decide based on coverage < 95% and workload room

3. Bug 3 (Analysis): Fixed unrealistic default blocking parallel execution
   - Old: `max_follow_ups = self.max_follow_ups_per_task or 99`
   - Impact: Calculation 0 + 3 + 99 = 102 >= 15 (max_tasks) blocked
   - Fix: Changed to `if is not None else 3` → 0 + 3 + 3 = 6 < 15

IMPLEMENTATION (9 files modified):
- prompts/deep_research/follow_up_generation.j2 (NEW - 336 lines)
  * Database behavior context (how sources work)
  * Entity permutation warnings with examples
  * Coverage gap analysis guidance
  * 0-N flexibility (LLM decides count)

- research/deep_research.py (7 changes)
  * Store research_question (line 320)
  * Load max_follow_ups_per_task config (line 203)
  * Updated _should_create_follow_ups() - removed heuristics (lines 3149-3186)
  * Replaced _create_follow_up_tasks() - LLM powered (lines 3188-3300)
  * Added hypothesis generation for follow-ups (lines 570-584)
  * Added coverage_decisions_by_task export (lines 3537-3544)
  * Fixed incomp

--- a/config_default.yaml
+++ b/config_default.yaml
@@ -194,6 +194,7 @@ research:
     min_results_per_task: 3       # Minimum results to consider task successful
     max_concurrent_tasks: 4       # Max parallel tasks (1=sequential, 3-5=parallel)
     task_timeout_seconds: 600     # Per-task timeout (10 min) - Conservative limit allows complex tasks (Twitter multi-page fetches) to complete
+    max_follow_ups_per_task: null # Max follow-ups per task (null=unlimited, N=cap per task) - LLM decides 0-N based on coverage quality
 
   # Feature flags (start disabled, enable after validation)
   enable_scoping: false           # Enable ScopingAgent (query clarification + planning)
