--- a/config_default.yaml
+++ b/config_default.yaml
@@ -197,6 +197,30 @@ research:
     max_follow_ups_per_task: null # Max follow-ups per task (null=unlimited, N=cap per task) - LLM decides 0-N based on coverage quality
     min_coverage_for_followups: 95 # Skip follow-ups if coverage >= this % (0-100, lower = more follow-ups)
 
+  # ============================================================================
+  # Phase 4: Manager-Agent Architecture (Task Prioritization + Saturation)
+  # ============================================================================
+  # Expert investigator mode - Manager LLM prioritizes tasks and detects saturation
+  # Enables "run until done" behavior with intelligent stopping
+  manager_agent:
+    enabled: true                     # Enable task prioritization (Phase 4A) - DEFAULT: true
+
+    # Saturation detection (Phase 4B)
+    saturation_detection: true        # Check for research saturation - DEFAULT: true
+    saturation_check_interval: 3      # Check every N tasks (avoid over-calling) - DEFAULT: 3
+    saturation_confidence_threshold: 70  # Stop if saturation confidence >= % - DEFAULT: 70 (70-90 recommended)
+    allow_saturation_stop: true       # Stop when saturated even if under max_tasks - DEFAULT: true
+                                       # If false: Saturation logged but ignored (always run to max_tasks)
+
+    # Reprioritization behavior
+    reprioritize_after_task: true     # Reprioritize queue after each completion - DEFAULT: true
+                                       # If false: Only prioritize initial queue (FIFO for follow-ups)
+
+    # Cost notes:
+    # - Prioritization: 1 LLM call per reprioritization (if 14 tasks → ~14 calls @ $0.005 = $0.07)
+    # - Saturation: 1 LLM call every 3 tasks (if 14 tasks → ~4 calls @ $0.005 = $0.02)
+    # - Total Phase 4 cost: ~$0.10 for 14-task research (minimal overhead)
+
   # Feature flags (start disabled, enable after validation)
   enable_scoping: false           # Enable ScopingAgent (query clarification + planning)
   enable_supervisor: false        # Enable ResearchSupervisor (task decomposition + routing)
