feat: Phase 5 - remove all coverage_score dependencies
Removed coverage_score from:
- _should_create_follow_ups (use decision + gaps instead of 95% threshold)
- _prioritize_tasks (use assessment prose instead of score)
- Sequential execution logging (log assessment instead of score)
- Follow-up generation (pass assessment_summary instead of score)
- config_default.yaml (remove min_coverage_for_followups: 95)

New logic:
- Skip follow-ups if: decision='stop' AND gaps=[] (LLM says sufficient)
- Manager sees: assessment prose + gaps list (qualitative)
- No numeric thresholds, pure LLM intelligence

Phase 5: 90% complete (schema + all code updated)
Remaining: Update saturation detection, full validation

--- a/config_default.yaml
+++ b/config_default.yaml
@@ -195,7 +195,8 @@ research:
     max_concurrent_tasks: 4       # Max parallel tasks (1=sequential, 3-5=parallel)
     task_timeout_seconds: 1800    # Per-task timeout (30 min) - Backstop for infinite retry loops, primary timeout at LLM call level (60s)
     max_follow_ups_per_task: null # Max follow-ups per task (null=unlimited, N=cap per task) - LLM decides 0-N based on coverage quality
-    min_coverage_for_followups: 95 # Skip follow-ups if coverage >= this % (0-100, lower = more follow-ups)
+    # Phase 5: Removed min_coverage_for_followups (was 95%, never triggered)
+    # LLM decides if follow-ups needed based on qualitative gap assessment
 
   # ============================================================================
   # Phase 4: Manager-Agent Architecture (Task Prioritization + Saturation)
