config: add SEC EDGAR configuration (no API key needed)
- Added sec_edgar database config to config_default.yaml
- Configurable settings:
  - timeout: 15s (SEC APIs are fast)
  - max_results_per_query: 100
  - rate_limit_per_second: 10 (SEC enforces 10 req/sec)
  - user_email: loaded from .env via ${SEC_EDGAR_USER_EMAIL}

No hardcoded values - fully configurable.
User must set SEC_EDGAR_USER_EMAIL in .env (e.g., yourname@domain.com)

SEC EDGAR Public APIs require NO authentication, just User-Agent header.
Aligns with project philosophy: configuration over hardcoded values.

--- a/config_default.yaml
+++ b/config_default.yaml
@@ -123,6 +123,15 @@ databases:
     default_congress: 118         # 118th Congress (2023-2025)
     default_limit: 100            # Default results per query
 
+  sec_edgar:
+    enabled: true
+    timeout: 15                   # SEC EDGAR APIs are fast
+    max_results_per_query: 100    # Default limit for search results
+    rate_limit_per_second: 10     # SEC enforces 10 requests/second
+    # User email for User-Agent header (loaded from .env)
+    # Required: SEC_EDGAR_USER_EMAIL (e.g., yourname@domain.com)
+    user_email: ${SEC_EDGAR_USER_EMAIL}
+
   # Social Media & Community Sources
   discord:
     enabled: true
