feat: minimal clean UI (2 tabs: User Guide + Deep Research)
- Replaced unified_search_app.py with streamlined streamlit_app.py
- Only 2 tabs instead of 5 (removed broken Monitor Management, redundant Quick Search, outdated Advanced Search)
- Clean focus on Deep Investigation (uses full SimpleDeepResearch engine)
- Added deployment infrastructure (docker-compose.prod.yml, nginx, DEPLOYMENT.md)
- Streamlit headless config for Docker

Ready for production deployment to Hetzner VPS.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,10 +38,11 @@ services:
       - ./config.yaml:/app/config.yaml:ro
       - ./data:/app/data
       - ./prompts:/app/prompts:ro
+      - ./.streamlit:/app/.streamlit:ro
     environment:
       - PYTHONUNBUFFERED=1
     shm_size: 2gb
-    command: ["streamlit", "run", "apps/unified_search_app.py", "--server.address", "0.0.0.0"]
+    command: ["streamlit", "run", "apps/streamlit_app.py", "--server.address", "0.0.0.0", "--server.headless", "true"]
 
 # Optional: Add a volume for persistent data
 volumes:
