feat(error-handling): Add configurable timeout detection to skip unfixable errors
- **Problem**: System attempted LLM reformulation for timeout errors (infrastructure failures)
- **Root Cause**: Rate limit optimization only caught explicit rate limit patterns, not timeouts
- **Solution**: Configurable unfixable error pattern matching

**Changes**:
1. Added `research.error_handling.unfixable_error_patterns` to config_default.yaml (13 patterns)
   - Rate limiting: "rate limit", "429", "quota exceeded", "throttl", etc.
   - Timeouts: "timed out", "timeout", "TimeoutError", "ReadTimeoutError", "handshake operation timed out"

2. Updated recursive_agent.py error handling (lines 1274-1306):
   - Load patterns from config with fallback defaults
   - Detect error type (rate limit vs timeout vs other)
   - Skip reformulation for all unfixable errors
   - Provide specific user feedback per error type

3. Stored config reference in __init__ for error pattern access

**Testing**:
- ✓ Config loading validated (13 patterns loaded)
- ✓ Pattern matching tested with real SAM.gov timeout error
- ✓ All test cases pass (rate limits, timeouts, fixable errors)

**Impact**:
- Saves LLM calls on infrastructure failures
- Faster failure detection (no wasted reformulation attempts)
- Better user feedback ("Timeout error - cannot fix with query reformulation")
- Fully configurable (users can add/remove patterns)

**Architecture**:
- Single source of truth: config_default.yaml
- Graceful fallback if config missing
- User-configurable via config.yaml overrides

--- a/config_default.yaml
+++ b/config_default.yaml
@@ -351,6 +351,32 @@ research:
     # - Falls back to all hypotheses if LLM keeps saying "continue" (respects hard ceilings)
 
 # ============================================================================
+# Research Configuration (v2 Recursive Agent & Deep Research)
+# ============================================================================
+research:
+  # Error handling configuration for query reformulation
+  error_handling:
+    # Errors that cannot be fixed by query reformulation
+    # These errors indicate infrastructure/API issues, not query problems
+    # When detected, the system skips reformulation and moves on
+    unfixable_error_patterns:
+      # Rate limiting patterns
+      - "rate limit"
+      - "429"
+      - "quota exceeded"
+      - "too many requests"
+      - "throttl"
+      - "request limit"
+      - "daily limit"
+      # Timeout patterns (infrastructure failures)
+      - "timed out"
+      - "timeout"
+      - "TimeoutError"
+      - "ReadTimeoutError"
+      - "ConnectTimeout"
+      - "handshake operation timed out"
+
+# ============================================================================
 # Logging Configuration
 # ============================================================================
 logging:
